fix run in ide